<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment">

    <data>
        <variable
            name="viewModelLogin"
            type="luky.zadanie.zadaniefinal.viewmodel.AuthentificationViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">
        <!--Login name input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginName"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconContentDescription="@string/personIcon"
            app:errorEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textColorHint="#616161"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password name input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginName"
            app:startIconContentDescription="@string/lock"
            app:startIconDrawable="@drawable/baseline_lock_24"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <!-- Button login -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/registerTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/registerQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>