<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddDeleteFriendFragment">

    <data>
        <variable
            name="viewModelAddDelete"
            type="luky.zadanie.zadaniefinal.viewmodel.AddDeleteFriendViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/find_fragment"
            app:srcCompat="@drawable/baseline_apps_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_near_pubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/find_near_pubs"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/floating_action_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_travel_explore_24"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_pubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/find_pubs"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/floating_action_button_near_pubs"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_store_24"
            tools:ignore="MissingConstraints" />

        <!-- TODO: Update blank fragment layout -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/friendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/friendName"
            android:layout_margin="20dp"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconContentDescription="@string/personIcon"
            app:errorEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/friendNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textColorHint="#616161"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addFriendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFriend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friendName"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAddDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/add_delete_item"
            app:spanCount="2"
            app:layout_constraintTop_toBottomOf="@+id/addFriendButton"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>