<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.NearPubListFragment">

    <data>
        <variable
            name="viewModelNearPubList"
            type="luky.zadanie.zadaniefinal.viewmodel.NearPubViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/find_fragment"
            app:srcCompat="@drawable/baseline_apps_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_pubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/find_pubs"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/floating_action_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_store_24"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button_add_delete_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/manage_friends"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/floating_action_button_pubs"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_manage_accounts_24"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNearPub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>