<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PubDetailFragment">

    <data>
        <variable
            name="viewModelPubDetail"
            type="luky.zadanie.zadaniefinal.viewmodel.PubDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pubNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/pubNameView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/detailCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pubNameView"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/pubTypeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pubTypeView"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    app:layout_constraintTop_toBottomOf="@+id/pubTypeTextView"
                    android:id="@+id/pubTypeView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/pubTypeView"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:id="@+id/pubCount"
            android:textSize="20sp"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCardView"
            />



        <Button
            android:id="@+id/showButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/buttonText"
            app:icon="@drawable/baseline_pin_drop_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pubCount"
            tools:ignore="MissingConstraints" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showButton"
            tools:ignore="MissingConstraints">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showButton"
                app:lottie_autoPlay="false"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/animation_coctail"
                tools:ignore="MissingClass,MissingConstraints" />

            <Button
                android:id="@+id/phoneView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModelPubDetail.pubDetail.phone}"
                android:textAlignment="center"
                android:visibility="gone"
                app:icon="@drawable/baseline_phone_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints">

            </Button>

            <Button
                android:id="@+id/emailView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModelPubDetail.pubDetail.email}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                app:icon="@drawable/baseline_alternate_email_24"
                tools:ignore="MissingConstraints">

            </Button>

            <Button
                android:id="@+id/websiteView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModelPubDetail.pubDetail.website}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone"
                app:icon="@drawable/baseline_public_24"
                app:startIconContentDescription="@string/website"
                tools:ignore="MissingConstraints">

            </Button>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>